<resources>
    <string name="app_name">BusPassSystem</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_mname">Middle Nme</string>
    <string name="hint_lname">Last Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="college_name">Collage Or School Name</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile No</string>
    <string name="date_of">Date Of Birth</string>
    <string name="class_s">Class</string>
    <string name="froms">From Stop</string>
    <string name="Tos">To Stop</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_student">StudentActivity</string>
</resources>
