<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/busback"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <ImageView
                android:id="@+id/iamge"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="200dp"
                android:layout_gravity="center"
                android:background="@drawable/profile"
                android:padding="10dp" />

            <EditText
                android:id="@+id/namee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/cname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/college_name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/taddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/mnumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/mobile"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/birth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/date_of"
                android:inputType="date"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/classs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/class_s"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/temail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/tpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/fromstop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/froms"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />
            <EditText
                android:id="@+id/tostop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/Tos"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/input_login_hint" />
            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/button_rounded_corner"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"

                android:background="@drawable/button_rounded_corner"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>